      files containing nuls provided that the server uses remctl 2.14 and
      the remctl configuration is updated to use stdin=last.
    - Correctly store data that begins with a dash.
    - Do not log the data passed to store.
    - New wallet-report script and multiple additional database reports.
    - Report ACL names as well as numbers in object history.

 -- Russ Allbery <rra@debian.org>  Sun, 21 Feb 2010 17:49:43 -0800

wallet (0.9-1) unstable; urgency=low

  * New upstream release.
    - The wallet client now supports -f and stdin for store.
    - kasetkey supports enable, disable, and examine.
    - Stop setting Stanford-specific server defaults.
  * The test suite no longer needs libio-string-perl.
  * Use a separate stamp file for configure and install and use touch $@
    to create stamp files.
  * Update debhelper compatibility level to V5 (no changes required).

 -- Russ Allbery <rra@debian.org>  Thu, 24 Apr 2008 16:09:19 -0700

wallet (0.8-1) unstable; urgency=low

  * New upstream version.
    - Fix protocol mismatch between client and server.
    - Add file object support to the wallet server.
    - Correctly handle empty objects in the wallet client.
    - Add -q flag to wallet-backend to suppress syslog logging.
    - Add class registration to the wallet-admin utility.
    - Updated design documentation.

 -- Russ Allbery <rra@debian.org>  Wed, 13 Feb 2008 13:59:06 -0800

wallet (0.7-1) unstable; urgency=low

  * New upstream version.
    - Add exists and autocreate wallet server interfaces.
    - Implement autocreation on the client instead of the server.
    - Make create once again an ADMIN-only function.
    - Always generate the srvtab from the newly downloaded keys.
    - Pass kadmin.local ktadd its options in the correct order.
    - Check naming policy before checking default ACLs.
    - Work around a bug in Net::Remctl with explicit undef arguments.
    - Correctly enable syslog logging in wallet-backend.