@@ -1,109 +1,18 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# GNU copyright 1997 to 1999 by Joey Hess.
-# Further updates by Russ Allbery <rra@debian.org>
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+%:
+	dh $@
 
-# This has to be exported to make some magic below work.
-export DH_OPTIONS
+override_dh_auto_configure:
+	dh_auto_econfigure -- --enable-reduced-depends
 
-# Used only for the man page.
-VERSION := $(shell dpkg-parsechangelog | grep ^Version: | cut -d' ' -f2 \
-		| cut -d- -f1)
+# We rebuild the perl directory Makefile to encode the correct installation
+# paths, since otherwise it defaults to using the local site module path.
+override_dh_auto_install:
+	cd perl && perl Makefile.PL INSTALLDIRS=vendor
+	dh_auto_install
+	install -d debian/tmp/etc/remctl/acl
+	install -m 0644 config/keytab.acl debian/tmp/etc/remctl/acl/keytab
 
-# Tell Autoconf the correct system types.  We need to know the host
-# architecture to determine whether setpag is available.
-DEB_HOST_ARCH      ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
-    SYSTEM = --build $(DEB_HOST_GNU_TYPE)
-else
-    SYSTEM = --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
-endif
-
-# Set up compiler flags.
-CFLAGS = -Wall -g
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-    CFLAGS += -O0
-else
-    CFLAGS += -O2
-endif
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	CFLAGS="$(CFLAGS)" ./configure $(SYSTEM) --prefix=/usr \
-	    --mandir=\$${prefix}/share/man \
-	    --enable-reduced-depends
-	touch $@
-
-build: build-arch build-indep
-build-arch: build-stamp
-build-indep:
-build-stamp: configure-stamp
-	dh_testdir
-	$(MAKE)
-	$(MAKE) check
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f configure-stamp build-stamp install-stamp
-	[ ! -f Makefile ] || $(MAKE) distclean
-	dh_clean
-
-install: install-stamp
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean
-	cd $(CURDIR)/perl && perl Makefile.PL INSTALLDIRS=vendor
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
-	DH_OPTIONS= dh_installdirs
-	DH_OPTIONS= dh_install --fail-missing
-	install -m 0644 config/keytab.acl \
-	    $(CURDIR)/debian/keytab-backend/etc/remctl/acl/keytab
-	touch $@
-
-binary: binary-arch binary-indep
-
-binary-arch: DH_OPTIONS=-a
-binary-arch: install-stamp
-	dh_testdir
-	dh_testroot
+override_dh_installchangelogs:
 	dh_installchangelogs NEWS
-	dh_installdocs -A README TODO
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary-indep: DH_OPTIONS=-i
-binary-indep: install-stamp
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs NEWS
-	dh_installdocs -A README TODO
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_perl
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-.PHONY: build build-arch build-indep clean binary-arch binary-indep binary
-.PHONY: install
