@@ -1,3 +1,5 @@
+README
+TODO
 docs/design
 docs/design-acl
 docs/design-api
